# json_server

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  details.hpp  exceptions.hpp  json_client.cpp  json_client.hpp  json_server.cpp  json_server.hpp  main.cpp
.github/workflows/: ci.yml
cmake/: Install.cmake
test/: CMakeLists.txt  test.cpp  test_data.json
test_data/: model.json
